Fixed some spacing issues

--- a/docroot/sites/all/modules/osha/osha_newsletter/includes/css/newsletter.css
+++ b/docroot/sites/all/modules/osha/osha_newsletter/includes/css/newsletter.css
@@ -115,14 +115,18 @@ td.social {
   text-transform: none;
 }
 .section-icon {
+  padding-top: 10px;
+}
+.section-icon img {
   max-height: 50px;
   max-width: 100%;
-  padding-bottom: 20px;
 }
 .see-more {
   color: #003399;
   text-decoration: none;
   font-size: 16px;
+}
+.view-all {
   font-size: 18px;
 }
 
@@ -172,16 +176,16 @@ td.social {
   padding-bottom: 20px;
 }
 
-.newsletter-section .row:nth-child(2) > .item.newsletter-half-width-list-item,
+/* .newsletter-section .row:first-child > .item.newsletter-half-width-list-item,
 .newsletter-section .row:first-child > .item.newsletter-half-image-left-item,
 .newsletter-section .row:first-child > .item.newsletter-full-width-list-item {
   padding-top: 20px;
-}
-.newsletter-section .row:last-child > .item.newsletter-half-width-list-item,
+} */
+/* .newsletter-section .row:last-child > .item.newsletter-half-width-list-item,
 .newsletter-section .row:last-child > .item.newsletter-half-image-left-item,
 .newsletter-section .row:last-child > .item.newsletter-full-width-list-item {
   padding-bottom: 20px;
-}
+} */
 /* .newsletter-section .row:first-child > .item {
   padding-top: 20px;
 }
